--- a/app/src/main/res/layout/live_stream_page.xml
+++ b/app/src/main/res/layout/live_stream_page.xml
@@ -25,9 +25,22 @@
         android:text="@string/BackButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/webview"
-        app:layout_constraintVertical_bias="0.447" />
+        app:layout_constraintVertical_bias="0.434" />
+
+    <Button
+        android:id="@+id/takePicButton"
+        android:layout_width="115dp"
+        android:layout_height="69dp"
+        android:text="@string/take_pic_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.779"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/webview"
+        app:layout_constraintVertical_bias="0.434" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
