picture capture, make guests, admin functions

--- a/app/src/main/res/layout/notifications_page.xml
+++ b/app/src/main/res/layout/notifications_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/PicsPageBackButton"
+        android:id="@+id/notifsPageBackButton"
         android:layout_width="61dp"
         android:layout_height="57dp"
         android:clickable="true"
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/abc_vector_test" />
 
     <ScrollView
-        android:id="@+id/PicsScrollView"
+        android:id="@+id/notifsScrollView"
         android:layout_width="389dp"
         android:layout_height="428dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.42">
 
         <LinearLayout
-            android:id="@+id/PicsLinearView"
+            android:id="@+id/notifsLinearView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -39,7 +39,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/DeletePicsButton"
+        android:id="@+id/DeleteNotificsButton"
         android:layout_width="119dp"
         android:layout_height="42dp"
         android:text="@string/clear_pics_button_text"
@@ -51,10 +51,10 @@
         app:layout_constraintVertical_bias="0.956" />
 
     <TextView
-        android:id="@+id/MediaPageTitle"
-        android:layout_width="92dp"
+        android:id="@+id/NotificationPageTitle"
+        android:layout_width="186dp"
         android:layout_height="35dp"
-        android:text="@string/media_page_title_text"
+        android:text="@string/notifications_page_title_text"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
