made some last min changes. Updated all the code

--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -77,8 +77,20 @@
         android:text="@string/change_email_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.667" />
+        app:layout_constraintVertical_bias="0.568" />
+
+    <Button
+        android:id="@+id/adminChangePasswordButton"
+        android:layout_width="165dp"
+        android:layout_height="61dp"
+        android:text="@string/change_password_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.698" />
 </androidx.constraintlayout.widget.ConstraintLayout>
