--- a/app/src/main/res/layout/user_page.xml
+++ b/app/src/main/res/layout/user_page.xml
@@ -10,6 +10,7 @@
         android:id="@+id/UserPageWelcomeTitle"
         android:layout_width="236dp"
         android:layout_height="49dp"
+        android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
