finished help page, started the junit testing

--- a/app/src/main/res/layout/guest_settings_page.xml
+++ b/app/src/main/res/layout/guest_settings_page.xml
@@ -28,10 +28,10 @@
         app:icon="@android:drawable/ic_partial_secure"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.622" />
+        app:layout_constraintVertical_bias="0.563" />
 
     <Button
         android:id="@+id/guestSettingPageBackButton"
@@ -45,6 +45,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85" />
+
+    <Button
+        android:id="@+id/guestHelpPageButton"
+        android:layout_width="236dp"
+        android:layout_height="52dp"
+        android:text="@string/help_page_button_Text"
+        android:textAllCaps="false"
+        app:icon="@android:drawable/ic_menu_help"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.703" />
 
     <TextView
         android:id="@+id/textView10"
