--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -13,10 +13,10 @@
         android:text="@string/BackButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintVertical_bias="0.941" />
 
     <ToggleButton
         android:id="@+id/notificationToggleButton"
@@ -72,8 +72,8 @@
 
     <Button
         android:id="@+id/ChangeEmailButton"
-        android:layout_width="178dp"
-        android:layout_height="64dp"
+        android:layout_width="176dp"
+        android:layout_height="51dp"
         android:text="@string/change_email_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,13 +84,24 @@
 
     <Button
         android:id="@+id/adminChangePasswordButton"
-        android:layout_width="165dp"
-        android:layout_height="61dp"
+        android:layout_width="173dp"
+        android:layout_height="58dp"
         android:text="@string/change_password_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.698" />
+        app:layout_constraintVertical_bias="0.688" />
+
+    <Button
+        android:id="@+id/adminHelpPageButton"
+        android:layout_width="168dp"
+        android:layout_height="52dp"
+        android:text="@string/help_page_button_Text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813" />
 </androidx.constraintlayout.widget.ConstraintLayout>
